package OGRT;

enum MessageType {
  JobStartMsg = 10;
  JobEndMsg = 11;
  ProcessInfoMsg = 12;
  SharedObjectMsg = 13;
  ForkMsg = 14;
  ExecveMsg = 15;
}

message JobStart {
  required string job_id = 100;
  required int64 start_time = 101;
}

message JobEnd {
  required string job_id = 200;
  required int64 end_time = 201;
}

message SharedObject {
  required string path = 400;
  optional string signature = 401;
}

message Module {
  required string name = 700;
}

message ProcessInfo {
  required string binpath = 300;
  required int32 pid = 301;
  required int32 parent_pid = 302;
  required int64 time = 303;
  optional string signature = 304;
  optional string job_id = 305;
  optional string username = 306;
  optional string hostname = 307;
  optional string cmdline = 308;
  repeated string environment_variables = 309;
  repeated string arguments = 310;
  repeated SharedObject shared_objects = 311;
  repeated Module loaded_modules = 312;
}

message JobInfo {
  required string job_id = 400;
  repeated ProcessInfo processes = 401;
}
